--- a/edit/clipeditor.ui
+++ b/edit/clipeditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>812</width>
-    <height>600</height>
+    <width>900</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="focusPolicy">
@@ -90,6 +90,12 @@
           </property>
           <item>
            <widget class="QWidget" name="widget" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>1</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <layout class="QGridLayout" name="gridLayout">
              <property name="leftMargin">
               <number>8</number>
@@ -274,7 +280,7 @@
            <widget class="QSplitter" name="splitter2">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
+              <horstretch>1</horstretch>
               <verstretch>5</verstretch>
              </sizepolicy>
             </property>
@@ -288,7 +294,7 @@
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                <horstretch>0</horstretch>
-               <verstretch>3</verstretch>
+               <verstretch>2</verstretch>
               </sizepolicy>
              </property>
              <property name="minimumSize">
@@ -1122,7 +1128,7 @@
                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Find in texteditor&lt;/p&gt;&lt;p&gt;Key: ctrl f&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="text">
-                <string>find</string>
+                <string>Find</string>
                </property>
               </widget>
              </item>
@@ -1135,7 +1141,7 @@
                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Jump to next found line after replace&lt;/p&gt;&lt;p&gt;Key: ctrl j&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="text">
-                <string>jump</string>
+                <string>Jump</string>
                </property>
                <property name="checked">
                 <bool>false</bool>
@@ -1364,7 +1370,26 @@
                </property>
               </widget>
              </item>
-             <item row="6" column="0">
+             <item row="6" column="2">
+              <widget class="QToolButton" name="buttonTimestamp">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="focusPolicy">
+                <enum>Qt::NoFocus</enum>
+               </property>
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Replace timestamp&lt;/p&gt;&lt;p&gt;Key: crtl t&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="text">
+                <string>Time</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="1">
               <widget class="QCheckBox" name="addTimestamp">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -1386,22 +1411,19 @@
                </property>
               </widget>
              </item>
-             <item row="6" column="1">
-              <widget class="QToolButton" name="buttonTimestamp">
+             <item row="6" column="0">
+              <widget class="QToolButton" name="buttonMute">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
-               <property name="focusPolicy">
-                <enum>Qt::NoFocus</enum>
-               </property>
                <property name="toolTip">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Replace timestamp&lt;/p&gt;&lt;p&gt;Key: crtl t&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Toggle mute modifier&lt;/p&gt;&lt;p&gt;Key: crtl m&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="text">
-                <string>Time</string>
+                <string>Mute</string>
                </property>
               </widget>
              </item>
