--- a/edit/clipeditor.ui
+++ b/edit/clipeditor.ui
@@ -1138,7 +1138,7 @@
                 <enum>Qt::NoFocus</enum>
                </property>
                <property name="toolTip">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Jump to next found line after replace&lt;/p&gt;&lt;p&gt;Key: ctrl j&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Jump to next found line after changing line&lt;/p&gt;&lt;p&gt;Key: ctrl j&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="text">
                 <string>Jump</string>
@@ -1160,7 +1160,7 @@
                 <enum>Qt::NoFocus</enum>
                </property>
                <property name="toolTip">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;scan audio and modify clip description&lt;/p&gt;&lt;p&gt;Key: ctrl n&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Scan audio and modify clip description&lt;/p&gt;&lt;p&gt;Key: ctrl n&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="styleSheet">
                 <string notr="true"/>
